# WaterQualityDetector

./: LICENSE
主控MCU（龙芯1B）/WaterDetect/: CMakeLists.txt  WaterDetect.layout  WaterDetect.lxp  dcmotor.c  dcmotor.h  key.c  key.h  ld.script  limit.c  limit.h  main.c  pump.c  pump.h  samotor.c  samotor.h  task.c  task.h  uart.c  uart.h
主控MCU（龙芯1B）/WaterDetect/RTThread/port/: stack.c  start.S  tick.c
主控MCU（龙芯1B）/WaterDetect/RTThread/src/: kservice.c
主控MCU（龙芯1B）/WaterDetect/include/: bsp.h
主控MCU（龙芯1B）/WaterDetect/ls1x-drv/fb/: ls1x_fb_utils.c
主控MCU（龙芯1B）/WaterDetect/ls1x-drv/spi/xpt2046/: touch_utils.c
主控MCU（龙芯1B）/WaterDetect/ls1x-drv/uart/: ns16550.c
主控MCU（龙芯1B）/WaterDetect/lvgl-7.0.1/porting/: lv_port_disp.h  lv_port_fs.c  lv_port_fs.h  lv_port_indev.h
主控MCU（龙芯1B）/WaterDetect/src/: install_3th_libraries.c
采样数据PC端软件/QTWater/: main.py  main.ui  main_window.py  water_quality_testing_communication.py
采样模块（STM32）/STM32_水质采集/HARDWARE/: CCD.c  CCD.h  EXTI.c  EXTI.h  FLASH.c  FLASH.h  Key.c  Key.h  L610.c  L610.h  LED.c  LED.h  Serial.c  Serial.h  TIM.c  TIM.h  adc.c  adc.h  ds18b20.c  ds18b20.h
采样模块（STM32）/STM32_水质采集/SYSTEM/usart/: usart.c
采样模块（STM32）/STM32_水质采集/USER/: ADC.uvguix.33970  ADC.uvoptx  ADC.uvprojx  JLinkLog.txt  main.c
